common-applications/freesky-icsl-hk-cluster/openlookeng-website/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openlookeng-website-frontend
  namespace: openlookeng-website
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: websiteinfo
  template:
    metadata:
      labels:
        app: websiteinfo
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: websitepod
        image: swr.ap-southeast-1.myhuaweicloud.com/infra-hk/icsl/openlookeng-website:b600b516e3b27628e53188a847bec8caf0aa6951
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 1000m
            memory: 1000Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
