common-applications/freesky-icsl-hk-cluster/openlookeng-website/service.yaml
# Config web service
---
apiVersion: v1
kind: Service
metadata:
  name: openlookeng-website-frontend-service
  namespace: openlookeng-website
spec:
  ports:
    - name: httpport
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: websiteinfo
  type: ClusterIP
