common-applications/freesky-icsl-hk-cluster/openlookeng-website/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/limit-connections: "2000"
    nginx.ingress.kubernetes.io/limit-rps: "2000"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header X-Frame-Options "SAMEORIGIN";
      add_header X-Cache-Status $upstream_cache_status;
      add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'unsafe-inline' *.googletagmanager.com *.baidu.com busuanzi.ibruce.info api.ip.sb cdn.jsdelivr.net;object-src 'none';frame-ancestors 'self'";
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^/zh-cn/signcla.html https://clasign.osinfra.cn/sign/Z2l0ZWUlMkZvcGVubG9va2VuZw== redirect;
      rewrite ^/signcla.html https://clasign.osinfra.cn/sign/Z2l0ZWUlMkZvcGVubG9va2VuZw== redirect;
      rewrite ^/zh-cn/(.*)$ /zh/$1 redirect;
      rewrite ^/en-us/(.*)$ /en/$1 redirect;
      rewrite ^/zh/privacypolicy.html$  /zh/privacy/ redirect;
      rewrite ^/en/privacypolicy.html$  /en/privacy/ redirect;
      rewrite ^/privacypolicy.html$     /en/privacy/ redirect;
  name: openlookeng-website-ingress
  namespace: openlookeng-website
spec:
  tls:
    - hosts:
        - openlookeng.myopeninfra.com
      secretName: openlookeng-website-tls
  rules:
    - host: openlookeng.myopeninfra.com
      http:
        paths:
          - backend:
              serviceName: openlookeng-website-frontend-service
              servicePort: 80
            path: /
